overflow fix 3

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -9,7 +9,13 @@
   }
 
   body {
-    @apply overflow-x-hidden bg-gray-800 text-gray-200;
+    @apply bg-gray-800 text-gray-200;
+  }
+
+  html,
+  body {
+    max-width: 100vw;
+    overflow-x: hidden;
   }
 }
 
